--- a/css/intranet.css
+++ b/css/intranet.css
@@ -1,7 +1,17 @@
 
-#c434 .contentbox > header{
+.intranet_news .contentbox > header{
     display: none;
 }
+
+section.course > a {
+    color: #062c5b;
+    font-size: 16px;
+    font-weight: normal;
+    margin-bottom: 12px;
+    padding: 4px;
+    //border: solid 1px;
+}
+
 
 .news {
     padding: 5px;
