list of courses plus toggable folder/file view

--- a/css/intranet.css
+++ b/css/intranet.css
@@ -12,21 +12,106 @@ section.course > a {
     //border: solid 1px;
 }
 
-
-.news {
-    padding: 5px;
-    margin: 5px;
-    border: 1px;
+section.folder > a {
+    margin-left: 5px;
 }
 
-.questions {
-    padding: 5px;
-    margin: 5px;
-    border: 1px;
+section.folder a:hover {
+    text-decoration: underline;
+}
+section.folder > li {
+    margin-left: 30px;
+    list-style-type: none;
 }
 
-.files {
-    padding: 5px;
-    margin: 5px;
-    border: 1px;
+ .mitte {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif, verdana;
+    text-align: left;
+    position: inherit;
+    width: 997px;
+    height: auto;
+    min-height: 1100px;
+    margin-top: 5px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.mitte a, a:link, a:visited {
+    color: #5d6a92;
+}
+
+.rechts {
+    width: 315px;
+    height: auto;
+    float: right;
+
+}
+
+.csc-default {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif, verdana;
+}
+.csc-space-after-25 {
+    margin-bottom: 25px !important;
+}
+h1.csc-firstHeader{
+    border-bottom: none;
+}
+.dsR4 {
+    width: 315px;
+    height: auto;
+}
+.dsR15 {
+    width: 105px;
+    height: 110px;
+}
+
+h1 {
+    color: #062c5b;
+    font-size: 22px;
+    font-weight: bold;
+    text-decoration: none;
+    margin: 0;
+}
+h4.intranet{
+    color: white;
+    font-size: 17px;
+    font-weight: bold;
+    background-image: url(<?=URLHelper::getLink("plugins_packages/virtUOS/IntranetWidget/assets/images/h4_hintergrund.gif") ?>);
+    background-repeat: repeat-x;
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+}
+
+h4, h2.box_header {
+    color: white;
+    font-size: 17px;
+    font-weight: bold;
+    background-image: url(/fileadmin/template/img/h4_hintergrund.gif);
+    background-repeat: repeat-x;
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+}
+.haupt {
+    width: auto;
+    height: auto;
+    margin-left: auto;
+    margin-right: 341px;
+}
+.zentriert {
+    text-align: center;
+}
+
+h2.intranet {
+    padding: 10px;
+    margin-top: -42px;
+    background-color: rgba(255,255,255,0.8);
+    width: 100%;
+    position: relative;
+    border-bottom: none;
 }
