listenansicht für schwarzes-brett items und formularfeld-breite für schwarzes-brett-items

--- a/css/intranet.css
+++ b/css/intranet.css
@@ -115,3 +115,17 @@ h2.intranet {
     position: relative;
     border-bottom: none;
 }
+
+section.schwarzesbrett-widget article header h1 a:before {
+   content: none;
+}
+
+form.studip_form fieldset select {
+    width: 100% !important;
+}
+form.studip_form fieldset input {
+    width: 100% !important;
+}
+form.studip_form fieldset textarea {
+    width: 100% !important;
+}
